--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovie.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MvcMovieContext": "Server=localhost;user=root;database=webAppDatabase;port=3306;password=12345;Allow User Variables=true;"
   }
 }
